k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels: 
      component: web
  template:
    metadata: 
      labels:
        component: web
    spec: 
      containers:
        - name: frontend
          image: kishan306/meetingspace-frontend:latest
          ports: 
            - containerPort: 5173
