k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports: 
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
