k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: backend-cluster-ip-service
spec: 
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 4000
      targetPort: 4000
