k8s/mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mysql
  ports:
    - port: 3306
      targetPort: 3306
